# youtube_sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: sentiment_analysis.py  youtube_scraper.py
tests/: test_sentiment_analysis.py  test_youtube_scraper.py
