[project]
name = "youtube-sentiment"
version = "0.1.0"
description = "A detailed sentiment analysis of YouTube comments using a Random Forest classifier."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Libraries for Data & API
    "google-api-python-client",
    "pandas",
    "numpy",

    # Machine Learning & NLP
    "scikit-learn",
    "nltk",
    "textblob",
    "langdetect",

    # Visualization & Reporting
    "matplotlib",
    "seaborn",
    "wordcloud",
    "fpdf2",

    # Unit testing & Code quality
    "black",
    "ruff",
    "pytest",
]